Post winter break builds and rebuild and tweaks on laptop to get things off the ground and learn more about building native apps

--- a/app.json
+++ b/app.json
@@ -1,4 +1,4 @@
 {
-  "name": "KnowledgeProject",
-  "displayName": "KnowledgeProject"
+  "name": "FinalYearProject",
+  "displayName": "FinalYearProject"
 }
