--- a/ios/FinalYearProject.xcodeproj/xcshareddata/xcschemes/FinalYearProject.xcscheme
+++ b/ios/FinalYearProject.xcodeproj/xcshareddata/xcschemes/FinalYearProject.xcscheme
@@ -29,9 +29,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-               BuildableName = "KnowledgeProject.app"
-               BlueprintName = "KnowledgeProject"
-               ReferencedContainer = "container:KnowledgeProject.xcodeproj">
+               BuildableName = "FinalYearProject.app"
+               BlueprintName = "FinalYearProject"
+               ReferencedContainer = "container:FinalYearProject.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
          <BuildActionEntry
@@ -43,9 +43,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "00E356ED1AD99517003FC87E"
-               BuildableName = "KnowledgeProjectTests.xctest"
-               BlueprintName = "KnowledgeProjectTests"
-               ReferencedContainer = "container:KnowledgeProject.xcodeproj">
+               BuildableName = "FinalYearProjectTests.xctest"
+               BlueprintName = "FinalYearProjectTests"
+               ReferencedContainer = "container:FinalYearProject.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
       </BuildActionEntries>
@@ -61,9 +61,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "00E356ED1AD99517003FC87E"
-               BuildableName = "KnowledgeProjectTests.xctest"
-               BlueprintName = "KnowledgeProjectTests"
-               ReferencedContainer = "container:KnowledgeProject.xcodeproj">
+               BuildableName = "FinalYearProjectTests.xctest"
+               BlueprintName = "FinalYearProjectTests"
+               ReferencedContainer = "container:FinalYearProject.xcodeproj">
             </BuildableReference>
          </TestableReference>
       </Testables>
@@ -71,9 +71,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "KnowledgeProject.app"
-            BlueprintName = "KnowledgeProject"
-            ReferencedContainer = "container:KnowledgeProject.xcodeproj">
+            BuildableName = "FinalYearProject.app"
+            BlueprintName = "FinalYearProject"
+            ReferencedContainer = "container:FinalYearProject.xcodeproj">
          </BuildableReference>
       </MacroExpansion>
       <AdditionalOptions>
@@ -94,9 +94,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "KnowledgeProject.app"
-            BlueprintName = "KnowledgeProject"
-            ReferencedContainer = "container:KnowledgeProject.xcodeproj">
+            BuildableName = "FinalYearProject.app"
+            BlueprintName = "FinalYearProject"
+            ReferencedContainer = "container:FinalYearProject.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
       <AdditionalOptions>
@@ -113,9 +113,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "KnowledgeProject.app"
-            BlueprintName = "KnowledgeProject"
-            ReferencedContainer = "container:KnowledgeProject.xcodeproj">
+            BuildableName = "FinalYearProject.app"
+            BlueprintName = "FinalYearProject"
+            ReferencedContainer = "container:FinalYearProject.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </ProfileAction>
