--- a/ios/Podfile
+++ b/ios/Podfile
@@ -1,8 +1,8 @@
 platform :ios, '9.0'
 require_relative '../node_modules/@react-native-community/cli-platform-ios/native_modules'
 
-target 'KnowledgeProject' do
-  # Pods for KnowledgeProject
+target 'FinalYearProject' do
+  # Pods for FinalYearProject
   pod 'FBLazyVector', :path => "../node_modules/react-native/Libraries/FBLazyVector"
   pod 'FBReactNativeSpec', :path => "../node_modules/react-native/Libraries/FBReactNativeSpec"
   pod 'RCTRequired', :path => "../node_modules/react-native/Libraries/RCTRequired"
@@ -34,7 +34,7 @@ target 'KnowledgeProject' do
   pod 'glog', :podspec => '../node_modules/react-native/third-party-podspecs/glog.podspec'
   pod 'Folly', :podspec => '../node_modules/react-native/third-party-podspecs/Folly.podspec'
 
-  target 'KnowledgeProjectTests' do
+  target 'FinalYearProjectTests' do
     inherit! :search_paths
     # Pods for testing
   end
@@ -42,10 +42,10 @@ target 'KnowledgeProject' do
   use_native_modules!
 end
 
-target 'KnowledgeProject-tvOS' do
-  # Pods for KnowledgeProject-tvOS
+target 'FinalYearProject-tvOS' do
+  # Pods for FinalYearProject-tvOS
 
-  target 'KnowledgeProject-tvOSTests' do
+  target 'FinalYearProject-tvOSTests' do
     inherit! :search_paths
     # Pods for testing
   end
