--- a/package.json
+++ b/package.json
@@ -1,19 +1,30 @@
 {
   "name": "FinalYearProject",
   "version": "0.0.1",
-  "private": true,
+  "main": "node_modules/expo/AppEntry.js",
   "scripts": {
-    "android": "react-native run-android",
-    "ios": "react-native run-ios",
-    "start": "react-native start",
+    "start": "expo start",
+    "android": "expo start --android",
+    "ios": "expo start --ios",
+    "web": "expo start --web",
+    "eject": "expo eject",
     "test": "jest",
     "lint": "eslint ."
   },
   "dependencies": {
+    "expo": "~36.0.0",
+    "install": "^0.13.0",
+    "npm": "^6.13.4",
     "react": "16.12.0",
-    "react-native": "0.61.5"
+    "react-dom": "16.12.0",
+    "react-native": "0.61.5",
+    "react-native-vector-icons": "^6.6.0",
+    "react-native-video": "^5.0.2",
+    "react-native-video-player": "^0.10.0",
+    "react-native-web": "~0.11.7"
   },
   "devDependencies": {
+    "babel-preset-expo": "~8.0.0",
     "@babel/core": "^7.7.7",
     "@babel/runtime": "^7.7.7",
     "babel-jest": "^24.9.0",
@@ -24,5 +35,6 @@
   },
   "jest": {
     "preset": "react-native"
-  }
+  },
+  "private": true
 }
