--- a/travis.yml
+++ b/travis.yml
@@ -1,1 +1,13 @@
 language: android
+dist: trusty
+before_install:
+#- nvm install 6
+- node --version
+install:
+- npm install
+android:
+  components:
+  - android-26
+  - extra-android-m2repository
+  - extra-google-google_play_services
+  - extra-google-m2repository
