New Travis file should work

--- a/travis.yml
+++ b/travis.yml
@@ -1,13 +1,18 @@
-language: android
-dist: trusty
-before_install:
-#- nvm install 6
-- node --version
-install:
-- npm install
-android:
-  components:
-  - android-26
-  - extra-android-m2repository
-  - extra-google-google_play_services
-  - extra-google-m2repository
+language: node_js
+
+node_js:
+  - 'lts/*'
+
+cache:
+  directories:
+    - node_modules
+
+jobs:
+  include:
+    - stage: "Lint"
+      script:
+        - npm run lint -- --quiet
+        - npm run lint:fix
+    - stage: "Test"
+      script:
+        - npm test
