Amsterdam week Trivial Component first working version - Video Player

--- a/package.json
+++ b/package.json
@@ -1,37 +1,31 @@
 {
-  "name": "FinalYearProject",
-  "version": "0.0.1",
-  "main": "node_modules/expo/AppEntry.js",
   "scripts": {
-    "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "react-native run-android",
+    "ios": "react-native run-ios",
     "web": "expo start --web",
-    "eject": "expo eject",
-    "test": "jest",
-    "lint": "eslint ."
+    "start": "expo start",
+    "test": "jest"
   },
   "dependencies": {
     "expo": "~36.0.0",
-    "install": "^0.13.0",
+    "expo-av": "^8.0.0",
     "npm": "^6.13.4",
-    "react": "16.12.0",
-    "react-dom": "16.12.0",
-    "react-native": "0.61.5",
-    "react-native-vector-icons": "^6.6.0",
+    "react": "~16.9.0",
+    "react-dom": "~16.9.0",
+    "react-native": "~0.61.4",
+    "react-native-gesture-handler": "~1.5.0",
+    "react-native-reanimated": "~1.4.0",
+    "react-native-screens": "2.0.0-alpha.12",
+    "react-native-unimodules": "~0.7.0",
     "react-native-video": "^5.0.2",
-    "react-native-video-player": "^0.10.0",
     "react-native-web": "~0.11.7"
   },
   "devDependencies": {
-    "babel-preset-expo": "~8.0.0",
-    "@babel/core": "^7.7.7",
-    "@babel/runtime": "^7.7.7",
-    "babel-jest": "^24.9.0",
-    "eslint": "^6.8.0",
-    "jest": "^24.9.0",
-    "metro-react-native-babel-preset": "^0.57.0",
-    "react-test-renderer": "16.12.0"
+    "@babel/core": "~7.6.0",
+    "babel-jest": "~24.9.0",
+    "jest": "~24.9.0",
+    "metro-react-native-babel-preset": "~0.56.0",
+    "react-test-renderer": "~16.9.0"
   },
   "jest": {
     "preset": "react-native"
