--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "react-native-screens": "2.0.0-alpha.12",
     "react-native-unimodules": "~0.7.0",
     "react-native-video": "^5.0.2",
-    "react-native-web": "~0.11.7"
+    "react-native-web": "~0.11.7",
+    "react-native-youtube": "^2.0.0"
   },
   "devDependencies": {
     "@babel/core": "~7.6.0",
