--- a/package.json
+++ b/package.json
@@ -15,11 +15,13 @@
     "react-native": "~0.61.4",
     "react-native-gesture-handler": "~1.5.0",
     "react-native-reanimated": "~1.4.0",
+    "react-native-safe-area-view": "^1.0.0",
     "react-native-screens": "2.0.0-alpha.12",
     "react-native-unimodules": "~0.7.0",
     "react-native-video": "^5.0.2",
     "react-native-web": "~0.11.7",
-    "react-native-youtube": "^2.0.0"
+    "react-native-youtube": "^2.0.0",
+    "react-navigation": "3.0.0-rc.5"
   },
   "devDependencies": {
     "@babel/core": "~7.6.0",
