--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react": "~16.9.0",
     "react-dom": "~16.9.0",
     "react-native": "~0.61.4",
+    "react-native-game-center": "^1.2.3",
     "react-native-gesture-handler": "~1.5.0",
     "react-native-reanimated": "~1.4.0",
     "react-native-safe-area-view": "^1.0.0",
