--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "react-native-video": "^5.0.2",
     "react-native-web": "~0.11.7",
     "react-native-youtube": "^2.0.0",
-    "react-navigation": "3.0.0-rc.5"
+    "react-navigation": "3.0.0-rc.5",
+    "react-navigation-backhandler": "^1.3.2"
   },
   "devDependencies": {
     "@babel/core": "~7.6.0",
