Restructure of project folders and start of QuizWebView

--- a/ios/Podfile
+++ b/ios/Podfile
@@ -45,4 +45,6 @@ target 'FinalYearProject' do
   use_native_modules!
   pod 'react-native-video', :path => '../node_modules/react-native-video'
 
+  pod 'react-native-webview', :path => '../node_modules/react-native-webview'
+
 end
