--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -144,6 +144,7 @@ def jscFlavor = 'org.webkit:android-jsc:+'
 def enableHermes = project.ext.react.get("enableHermes", false);
 
 dependencies {
+    implementation project(':react-native-webview')
     implementation project(':achievement-view')
     implementation project(':react-native-video')
     implementation fileTree(dir: "libs", include: ["*.jar"])
