--- a/android/settings.gradle
+++ b/android/settings.gradle
@@ -1,4 +1,6 @@
 rootProject.name = 'FinalYearProject'
+include ':react-native-webview'
+project(':react-native-webview').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-webview/android')
 include ':achievement-view'
 project(':achievement-view').projectDir = new File(rootProject.projectDir, '../node_modules/achievement-view/android')
 include ':react-native-video'
