--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "react-native-unimodules": "~0.7.0",
     "react-native-video": "^5.0.2",
     "react-native-web": "~0.11.7",
-    "react-native-webview": "^8.0.5",
+    "react-native-webview": "7.4.3",
     "react-native-youtube": "^2.0.0",
     "react-navigation": "3.0.0-rc.5",
     "react-navigation-backhandler": "^1.3.2"
