--- a/package.json
+++ b/package.json
@@ -24,7 +24,10 @@
     "react-native-webview": "7.4.3",
     "react-native-youtube": "^2.0.0",
     "react-navigation": "3.0.0-rc.5",
-    "react-navigation-backhandler": "^1.3.2"
+    "react-navigation-backhandler": "^1.3.2",
+    "react-particles-js": "^2.7.0",
+    "react-transition-group": "^4.3.0",
+    "reactjs-popup": "^1.5.0"
   },
   "devDependencies": {
     "@babel/core": "~7.6.0",
