--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "expo": "~36.0.0",
+    "expo-asset-utils": "^1.2.0",
     "expo-av": "^8.0.0",
     "npm": "^6.13.4",
     "react": "~16.9.0",
@@ -31,6 +32,7 @@
   },
   "devDependencies": {
     "@babel/core": "~7.6.0",
+    "@babel/plugin-transform-async-to-generator": "^7.8.3",
     "babel-jest": "~24.9.0",
     "jest": "~24.9.0",
     "metro-react-native-babel-preset": "~0.56.0",
