--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "react-navigation-backhandler": "^1.3.2",
     "react-particles-js": "^2.7.0",
     "react-transition-group": "^4.3.0",
-    "reactjs-popup": "^1.5.0"
+    "reactjs-popup": "^1.5.0",
+    "rn-sprite-sheet": "^1.1.6"
   },
   "devDependencies": {
     "@babel/core": "~7.6.0",
