--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-native-reanimated": "~1.4.0",
     "react-native-safe-area-view": "^1.0.0",
     "react-native-screens": "2.0.0-alpha.12",
+    "react-native-simple-radio-button": "^2.7.4",
     "react-native-unimodules": "~0.7.0",
     "react-native-video": "^5.0.2",
     "react-native-web": "~0.11.7",
