--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-native": "~0.61.4",
     "react-native-game-center": "^1.2.3",
     "react-native-gesture-handler": "~1.5.0",
+    "react-native-particles": "0.0.8",
     "react-native-reanimated": "~1.4.0",
     "react-native-safe-area-view": "^1.0.0",
     "react-native-screens": "2.0.0-alpha.12",
@@ -27,7 +28,6 @@
     "react-native-youtube": "^2.0.0",
     "react-navigation": "3.0.0-rc.5",
     "react-navigation-backhandler": "^1.3.2",
-    "react-particles-js": "^2.7.0",
     "react-transition-group": "^4.3.0",
     "reactjs-popup": "^1.5.0",
     "rn-sprite-sheet": "^1.1.6"
@@ -38,7 +38,8 @@
     "babel-jest": "~24.9.0",
     "jest": "~24.9.0",
     "metro-react-native-babel-preset": "~0.56.0",
-    "react-test-renderer": "~16.9.0"
+    "react-test-renderer": "~16.9.0",
+    "typescript": "^3.8.3"
   },
   "jest": {
     "preset": "react-native"
