--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react": "~16.9.0",
     "react-dom": "~16.9.0",
     "react-native": "~0.61.4",
+    "react-native-elements": "^1.2.7",
     "react-native-gesture-handler": "~1.5.0",
     "react-native-particles": "0.0.8",
     "react-native-reanimated": "~1.4.0",
